--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/99943eff07.js" crossorigin="anonymous"></script>
-    <title>Vite App</title>
+    <title>聚合资讯</title>
   </head>
   <body>
     <div id="app"></div>
