--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/99943eff07.js" crossorigin="anonymous"></script>
+    <link href="https://at.alicdn.com/t/c/font_4045781_te5v4dm7dab.css?spm=a313x.7781069.1998910419.84&file=font_4045781_te5v4dm7dab.css" rel="stylesheet" type="text/css"/>
     <title>聚合资讯</title>
   </head>
   <body>
