--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/99943eff07.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/99943eff07.js" crossorigin="anonymous"></script> -->
     <link href="./src/assets/iconfont.css" rel="stylesheet" type="text/css"/>
     <title>聚合资讯</title>
   </head>
